atualização da imagens

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header class="cabecalho"> 
-        <img src="img/imagemlogo.png" alt="">
+        <img src="img/giflogo.gif" alt="imagem do logo">
     </header>
     <main class="pai">
         <div class="caixa">
@@ -25,7 +25,7 @@
                                                                   
                 <span class="campos-de-selecao">
                     
-                    <h2>Usaremos:</h2>
+                    <h2>Escolha uma opção:</h2>
                     <div class="pos4">
                         <Select Id="Selector" >
                         <option value="anth">Selecione</option>
@@ -56,6 +56,6 @@
                                      </div>
                                  </div>
                                 </main>
-                                 </body>
+                               </body>
  <script src="javascript/javascript.js"></script>                                                                               
 </html>
