--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
          <title >Codificação de Cifra de César e Base64 
            
          </title>
+          <link rel="shortcut icon" href="img/imagelogo.jfif/>
          <link rel="stylesheet" href="css/estilo.css">
          <link rel="preconnect" href="https://fonts.googleapis.com">
          <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
